# tessera

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: README.md  bench_retrieval.py
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/custom_encoder/: README.md  custom_encoder.py
examples/image_search/: README.md  search.py
examples/quickstart/: README.md  quickstart.py
examples/rag_answer/: README.md  answer.py
scripts/: check.sh
tessera/: __init__.py  chunking.py  cli.py  config.py  corpus.py  exceptions.py  io.py  pipeline.py  preprocessing.py  registry.py  similarity.py  types.py
tessera/encoders/: __init__.py  base.py  clip.py  hashing.py
tessera/generation/: __init__.py  base.py  template.py
tessera/retrieval/: __init__.py  dense.py  fusion.py  multimodal.py
tessera/stores/: __init__.py  base.py  faiss_store.py  memory.py
tests/: test_api.py  test_chunking.py  test_cli.py  test_corpus.py  test_encoder_registry.py  test_fusion.py  test_hashing_encoder.py  test_io.py  test_memory_store.py  test_multimodal_retriever.py  test_pipeline.py  test_registry.py  test_retriever.py  test_similarity.py  test_template_generator.py  test_version.py
