[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-rag"
dynamic = ["version"]
description = "Multimodal retrieval-augmented generation framework combining image and text encoders"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Nathanm" }]
dependencies = [
    "numpy>=1.21",
]

[tool.hatch.version]
path = "tessera/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tessera"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
# B905: zip(strict=...) is 3.10+, we still support 3.9.
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"examples/*" = ["E501", "T201"]

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["faiss", "open_clip", "torch", "PIL", "PIL.*"]
ignore_missing_imports = true
